--- a/main.ipynb
+++ b/main.ipynb
@@ -28,12 +28,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "ff329b7c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "never mind"
+   ]
   },
   {
    "cell_type": "code",
